--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,5 +1,5 @@
 <table><tr><td style="width:480px;"><h2>User Groups List </h2></td>
-    <td><%= link_to image_tag("group-new.png",:height=>"40",:width=>"40"),new_group_path %></td></tr></table>
+    <td><%= link_to image_tag("group-new.png",:title=>"Create Group",:height=>"40",:width=>"40"),new_group_path %></td></tr></table>
 <table>
 
   <tr>
@@ -15,13 +15,13 @@
             <%for group in @group%>
               <tr>
                 <td>
-                  <%= link_to "#{group.name}",group %>
+                  <%= link_to "#{group.name}" %>
                 </td>
                 <td>
-                  <%= link_to "delete", group, :method => :delete, :confirm => "You sure?" %>
+                  <%= link_to "delete", delete_group_path(group.id), :method => :delete, :confirm => "You sure?" %>
                 </td>
                 <td>
-                  <%= link_to 'Edit', edit_group_path(@group) %>
+                  <%= link_to 'Edit', edit_group_path(group.id) %>
                 </td>
 
                 <td>
@@ -33,7 +33,7 @@
           <%else%>
             <tr>
               <td>
-                <%#=flash[:notice]%>
+                
               </td>
             </tr>
 
