add users group list in profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,29 @@
         <%= gravatar_for @user %>
         <%= h @user.name %>
       </h2>
+	  
+	  <table>
+	   <tr>
+	    <td>
+		 
+	     <h3> <%= @user.name%>'s Group List </h3>
+	    </td>
+	    <tr>
+		<td>Group Name</td> 
+		<tr>  
+	  <%for usersgroup in @users_groups%>
+	   <% @groupfind = Group.find(:first, :conditions => "id = #{usersgroup.group_id}") %>
+	   
+	  <tr>
+	   <td>
+	     <%= @groupfind.name %><% if @groupfind.user_id == current_user.id %><span style="color:red;font-size:28px;padding:10px 0 0;width:5px;">*</span><% end %>
+	   </td>
+	  </tr> 
+	  
+	  <%end%>
+	  
+	  
+	  
       <%= render 'follow_form' if signed_in? %>
       <% unless @user.microposts.empty? %>
         <table class="microposts">
