--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
 	<% if signed_in? %>
 		<li><%= link_to "Users", users_path %></li>
 	    <li><%= link_to "Profile", current_user %></li>
+		<li><%= link_to "Create Group", new_group_path%></li>
 		<li><%= link_to "Settings", edit_user_path(current_user) %></li>
     <% end %>
     <li><%= link_to "Help", help_path %></li>
