--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <div id="header" class="round">
   <%= link_to logo, root_path %>
+  <h2><%= @title %></h2>
   <ul class="navigation round">
     <li><%= link_to "Home", root_path %></li>
 	<% if signed_in? %>
