--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,6 +11,7 @@
       %li= link_to "My Groups", groups_path
       \#
       %li= link_to "All Groups", all_groups_path
+      %li= link_to "Chat", chat_rooms_path
       %li= link_to "Settings", edit_user_path(current_user)
     %li= link_to "Help", help_path
     - if signed_in?
