Chat is correctly updated with javascript

--- a/app/views/chat_rooms/index.html.haml
+++ b/app/views/chat_rooms/index.html.haml
@@ -1,16 +1,18 @@
 - @title = "Chat room"
 
-%ul#chat
-  - @chat_updates.each do |chat_update|
-    %li.chat_update
-      .time= l chat_update.created_at, :format => :short
-      .login= chat_update.login
-      .message= chat_update.message
+#chat
+  .hidden.timestamp= Time.now.to_i
+  %ul.chat_updates
+    - @chat_updates.each do |chat_update|
+      %li[chat_update]
+        .time= l chat_update.created_at, :format => :short
+        .login= chat_update.login
+        .message= chat_update.message
 
-- form_for [ChatRoom.new, ChatUpdate.new] do |f|
-  .field
-    = f.label :message
-    = f.text_field :message
-  .actions
-    = f.submit "Send"
+  - form_for [ChatRoom.new, ChatUpdate.new] do |f|
+    .field
+      = f.label :message
+      = f.text_field :message
+    .actions
+      = f.submit "Send"
 
