--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,24 +1,1 @@
-- form_for(@group) do |f|
-  %table
-    %tr
-      %td
-        = f.label :name
-        %br/
-    %tr
-      %td
-        = f.text_field :name
-        %br/
-    %tr
-      %td
-        = f.label :description
-        %br/
-    %tr
-      %td
-        = f.text_area :description
-        %br/
-  %table
-    %tr
-      %td{:width => "10%"}
-        = f.submit "Submit"
-      %td
-        = link_to image_tag("button_cancel.png",:height=>"20",:width=>"90"),groups_path
+= render "form"
