--- a/app/views/microposts/_micropost.html.haml
+++ b/app/views/microposts/_micropost.html.haml
@@ -1,9 +1,6 @@
-%tr
-  %td.micropost
-    %span.content= h micropost.content
-    %span.timestamp
-      Posted #{time_ago_in_words(micropost.created_at)} ago.
+%li[micropost]
+  %span.content= h micropost.content
+  %span.timestamp= "Posted #{time_ago_in_words(micropost.created_at)} ago."
   - if current_user?(micropost.user)
-    %td
-      = link_to "delete", micropost, :method => :delete, |
-        :confirm => "You sure?"                          |
+    = link_to "Delete", micropost, :method => :delete, :confirm => "You sure?"
+
