Fixed all groups view

--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -3,26 +3,5 @@
     %td{:style => "width:480px;"}
       %h2 User Groups List
     %td= link_to image_tag("group-new.png",:title=>"Create Group",:height=>"40",:width=>"40"),new_group_path
-%table
-  %tr
-    %td
-      %table
-        %tr
-          %th Group Name
-          %th Delete
-          %th Edit
-          %th Invite
-        - if @groups
-          - for group in @groups
-            %tr
-              %td
-                = link_to group_name(group, current_user)
-              %td
-                = link_to "delete", delete_group_path(group.id), :method => :delete, :confirm => "You sure?"
-              %td
-                = link_to 'Edit', edit_group_path(group.id)
-              %td
-                = link_to "invite", :action =>"invite", :gid => group.id
-        - else
-          %tr
-            %td
+
+= render "groups", :object => @groups
