--- a/app/views/groups/_groups.html.haml
+++ b/app/views/groups/_groups.html.haml
@@ -7,6 +7,7 @@
           %th Delete
           %th Edit
           %th Invite
+          %th Chat
         - if groups
           - groups.each do |group|
             %tr
@@ -18,6 +19,8 @@
                 = link_to 'Edit', edit_group_path(group.id)
               %td
                 = link_to "invite", :action =>"invite", :gid => group.id
+              %td
+                = link_to "Chat", chat_room_path(group.chat_room)
         - else
           %tr
             %td
