--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -5,3 +5,6 @@
     %td= link_to image_tag("group-new.png",:title=>"Create Group",:height=>"40",:width=>"40"),new_group_path
 
 = render "groups", :object => @groups
+- if @groups.empty?
+  %p There are no groups here.
+
