Implemented chat room current rule change Migrated stylesheet to sass

--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -3,10 +3,19 @@
 #chat
   .hidden.timestamp= Time.now.to_i
   = render "chat_users/chat_users", :object => @users_on_chat
-  %ul.chat_updates
-    - @chat_room.chat_updates.each do |chat_update|
-      = render "chat_updates/chat_update", :object => chat_update
-    %a.chat_end{:name => 'chat_end'}
+  .main
+    %ul.chat_updates
+      - @chat_room.chat_updates.each do |chat_update|
+        = render "chat_updates/chat_update", :object => chat_update
+      %a.chat_end{:name => 'chat_end'}
+
+    %ul.rules
+      - @chat_room.group.rules.each do |rule|
+        %li.rule{:class => @chat_room.current_rule == rule ? 'current' : ''}
+          %p= rule.name
+        %ul.actions
+          - unless @chat_room.current_rule == rule
+            %li= link_to "Activate", select_current_rule_chat_room_path(@chat_room, :rule_id => rule.id), :method => :post
 
   - form_for [@chat_room, ChatUpdate.new] do |f|
     .field
@@ -14,4 +23,5 @@
       = f.text_field :message
     .actions
       = f.submit "Send"
+
 
