--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,5 +1,5 @@
-#footer
-  %ul.navigation.round
+#footer.round.span-24.last
+  %ul.navigation
     %li= link_to "About", about_path
     %li= link_to "Contact", contact_path
     %li
