--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,9 @@
   %body
     .container
       = render 'layouts/header'
-      #content.round
+
+      #content.round.span-24.last
         - flash.each do |key, value|
           %div{:class => "flash #{key}"}= value
         = yield
       = render 'layouts/footer'
-      = debug(params) if Rails.env.development?
