--- a/app/views/chat_users/_chat_users.html.haml
+++ b/app/views/chat_users/_chat_users.html.haml
@@ -1,9 +1,10 @@
 %ul.chatting_users
   - chat_users.each do |cu|
-    %li
-      = gravatar_for cu, :size => 30
-      %p.name= cu.name
-      %ul.actions
+    %li.chat_user{:class => chat_user_class(@chat_room, cu)}
+      .brief
+        = gravatar_for cu, :size => 60
+        %p.name= cu.name
+      %ul.actions.contextMenu
         %li= select_leader_link(@chat_room, cu)
         %li= select_problem_owner_link(@chat_room, cu)
 
