--- a/app/views/chat_updates/_form.html.haml
+++ b/app/views/chat_updates/_form.html.haml
@@ -1,4 +1,5 @@
-- form_for [@chat_room, @chat_update || ChatUpdate.new] do |f|
+- form_for [@chat_room, @chat_update] do |f|
+  = hidden_field_tag :update_type, "commit"
   .field
     = f.label :message
     = f.text_field :message
