--- a/public/stylesheets/sass/custom.sass
+++ b/public/stylesheets/sass/custom.sass
@@ -189,25 +189,29 @@ form.new_micropost
     border: 1px solid
     padding: 3px
     overflow: auto
-  li.chat_update div
-    display: inline
-    &.login
-      color: blue
+  li.chat_update
+    &.uncommited
+      div.message
+        color: green
+    div
+      display: inline
+      &.login
+        color: blue
 
 ul.chatting_users
   position: relative
   list-style: none
   overflow: hidden
   margin-bottom: 0
-  li.chat_user.leader .brief
-    background-color: yellow
-  li.chat_user.problem_owner .brief
-    background-color: green
   li.chat_user
     float: left
     margin-right: 10px
     padding: 2px
     width: 100px
+    &.leader .brief
+      background-color: yellow
+    &.problem_owner .brief
+      background-color: green
     img
       margin-left: 20px
     p
@@ -215,6 +219,8 @@ ul.chatting_users
       margin: 0
     .brief
       border: 1px solid black
+    &.active
+      background-color: #cfffcf
   ul.actions
     list-style: none
     color: #888
