Threaded chat updates are shown

--- a/app/views/chat_updates/_chat_update.haml
+++ b/app/views/chat_updates/_chat_update.haml
@@ -2,3 +2,6 @@
   .time= l chat_update.created_at, :format => :short
   .login= chat_update.login
   .message= chat_update.message
+  %ul.children
+    - chat_update.children.not_new.each do |child_chat_update|
+      = render "chat_updates/chat_update", :object => child_chat_update
