--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -6,8 +6,11 @@
   .main.span-24.last
     .span-16
       %ul.chat_updates
-        - @chat_room.chat_updates.not_new.each do |chat_update|
+        - @chat_room.chat_updates.root.not_new.each do |chat_update|
           = render "chat_updates/chat_update", :object => chat_update
+          %ul.children
+            - chat_update.children.not_new.each do |child_chat_update|
+              =render "chat_updates/chat_update", :object => child_chat_update
         %a.chat_end{:name => 'chat_end'}
     .span-8.last
       = render "chat_rules/chat_rules"
