--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -174,6 +174,8 @@ form.new_micropost {
   border: 1px solid;
   padding: 3px;
   overflow: auto; }
+#chat li.chat_update.active {
+  background-color: #cccccc; }
 #chat li.chat_update.uncommited div.message {
   color: green; }
 #chat li.chat_update div {
