--- a/public/stylesheets/sass/custom.sass
+++ b/public/stylesheets/sass/custom.sass
@@ -190,6 +190,8 @@ form.new_micropost
     padding: 3px
     overflow: auto
   li.chat_update
+    &.active
+      background-color: #ccc
     &.uncommited
       div.message
         color: green
