Small Text and UI changes

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,8 +1,6 @@
-#footer.round.span-24.last
+#footer.span-24.last.round
   %ul.navigation
     %li= link_to "About", about_path
     %li= link_to "Contact", contact_path
     %li
-      %a{:href => "http://news.railstutorial.org/"} News
-    %li
-      %a{:href => "http://www.railstutorial.org/"} Rails Tutorial
+      %a{:href => "http://github.com/wolfgangihloff/peergroupsupervision"} on GitHub
