--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -1,5 +1,3 @@
 %h1 Contact
 %p
-  Contact Ruby on Rails Tutorial about the sample app at the
-  = succeed "." do
-    %a{:href => "http://www.railstutorial.org/feedback"} feedback page
+  wolfgang.ihloff@gmail.com
