--- a/app/views/pages/help.html.haml
+++ b/app/views/pages/help.html.haml
@@ -1,8 +1,3 @@
 %h1 Help
-%p
-  Get help on Ruby on Rails Tutorial at the
-  = succeed "." do
-    %a{:href => "http://www.railstutorial.org/help"} Rails Tutorial help page
-  To get help on this sample app, see the
-  = succeed "." do
-    %a{:href => "http://www.railstutorial.org/book"} Rails Tutorial book
+= render 'help'
+
