--- a/app/views/users/_follow.html.haml
+++ b/app/views/users/_follow.html.haml
@@ -1,4 +1,3 @@
-- form_remote_for current_user.relationships.
-- build(:followed_id => @user.id) do |f|
+- form_remote_for current_user.relationships.build(:followed_id => @user.id) do |f|
   %div= f.hidden_field :followed_id
   .actions= f.submit "Follow"
