--- a/app/views/users/_unfollow.html.haml
+++ b/app/views/users/_unfollow.html.haml
@@ -1,4 +1,3 @@
-- form_remote_for current_user.relationships.find_by_followed_id(@user),
-- :html => { :method => :delete } do |f|
+- form_remote_for current_user.relationships.find_by_followed_id(@user), :html => { :method => :delete } do |f|
   %div= f.hidden_field :followed_id
   .actions= f.submit "Unfollow"
