--- a/public/stylesheets/sass/custom.sass
+++ b/public/stylesheets/sass/custom.sass
@@ -184,8 +184,8 @@ form.new_micropost
 #chat
   ul.chat_updates
     height: 300px
-    margin-top: 10px
     border: 1px solid
+    margin-right: 0
     padding: 3px
     overflow: auto
   li.chat_update
@@ -227,6 +227,7 @@ ul.chatting_users
     color: #888
 
 ul.rules
+  margin-left: 0
   li
     list-style-type: none
     padding: 3px
