Aligned Message, Message text box and send button on one line below chat window.

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -132,45 +132,18 @@ ul.users {
 .users li {
   list-style: none; }
 
-/* CSS for the microposts */
-h2.micropost {
-  margin-bottom: 0; }
-
-table.microposts tr {
-  height: 70px; }
-  table.microposts tr td.gravatar {
-    border-top: 1px solid #cccccc;
-    vertical-align: top;
-    width: 50px; }
-  table.microposts tr td.micropost {
-    border-top: 1px solid #cccccc;
-    vertical-align: top;
-    padding-top: 10px; }
-    table.microposts tr td.micropost span.timestamp {
-      display: block;
-      font-size: 85%;
-      color: #666666; }
-
 div.user_info img {
   padding-right: 0.1em; }
 div.user_info a {
   text-decoration: none; }
 div.user_info span.user_name {
   position: absolute; }
-div.user_info span.microposts {
-  font-size: 80%; }
-
-form.new_micropost {
-  margin-bottom: 2em; }
-  form.new_micropost textarea {
-    height: 4em;
-    margin-bottom: 0; }
 
 /* CSS for chat */
 #chat ul.chat_updates {
   height: 300px;
   border: 1px solid;
-  margin-right: 0;
+  margin: 0 0 0 1.5em;
   padding: 3px;
   overflow: auto; }
 #chat li.chat_update.active {
@@ -209,8 +182,18 @@ ul.chatting_users {
     list-style: none;
     color: #888888; }
 
+form.edit_chat_update .field {
+  margin-left: 1.5em; }
+  form.edit_chat_update .field label {
+    display: inline;
+    margin-right: 10px; }
+  form.edit_chat_update .field #chat_update_message {
+    width: 440px; }
+  form.edit_chat_update .field #chat_update_submit {
+    width: 104px; }
+
 ul.rules {
-  margin-left: 0; }
+  margin: 0 1.5em 0 0; }
   ul.rules li {
     list-style-type: none;
     padding: 3px; }
