--- a/app/views/chat_updates/_form.html.haml
+++ b/app/views/chat_updates/_form.html.haml
@@ -1,9 +1,8 @@
-- form_for [@chat_room, @chat_update], :html => {:autocomplete => "off"}  do |f|
+- form_for [@chat_room, @chat_update], :html => {:autocomplete => "off", :class => 'span-16 last edit_chat_update'}  do |f|
   = hidden_field_tag :update_type, "commit"
   = hidden_field_tag "parent_id", @chat_update.parent? ? @chat_update.parent.id : ''
-  .field
+  .field.span-16
     = f.label :message
     = f.text_field :message
-  .actions
     = f.submit "Send"
 
