--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -12,7 +12,8 @@ body {
   margin-top: 1em;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 100%;
-  background: white; }
+  background: white;
+  padding: 20px; }
 
 /* Links */
 a {
@@ -143,7 +144,7 @@ div.user_info span.user_name {
 #chat ul.chat_updates {
   height: 300px;
   border: 1px solid;
-  margin: 0 0 0 1.5em;
+  margin: 0;
   padding: 3px;
   overflow: auto; }
 #chat li.chat_update.active {
@@ -182,18 +183,16 @@ ul.chatting_users {
     list-style: none;
     color: #888888; }
 
-form.edit_chat_update .field {
-  margin-left: 1.5em; }
-  form.edit_chat_update .field label {
-    display: inline;
-    margin-right: 10px; }
-  form.edit_chat_update .field #chat_update_message {
-    width: 440px; }
-  form.edit_chat_update .field #chat_update_submit {
-    width: 104px; }
+form.edit_chat_update .field label {
+  display: inline;
+  margin-right: 10px; }
+form.edit_chat_update .field #chat_update_message {
+  width: 440px; }
+form.edit_chat_update .field #chat_update_submit {
+  width: 104px; }
 
 ul.rules {
-  margin: 0 1.5em 0 0; }
+  margin: 0; }
   ul.rules li {
     list-style-type: none;
     padding: 3px; }
