--- a/public/stylesheets/sass/custom.sass
+++ b/public/stylesheets/sass/custom.sass
@@ -13,7 +13,7 @@ body
   font-family: Helvetica Neue,Helvetica,Arial,sans-serif
   font-size: 100%
   background: #fff
-
+  padding: 20px
 /* Links
 
 a
@@ -156,7 +156,7 @@ div.user_info
   ul.chat_updates
     height: 300px
     border: 1px solid
-    margin: 0 0 0 1.5em
+    margin: 0
     padding: 3px
     overflow: auto
   li.chat_update
@@ -198,7 +198,6 @@ ul.chatting_users
     color: #888
 
 form.edit_chat_update .field
-  margin-left: 1.5em
   label
     display: inline
     margin-right: 10px
@@ -208,7 +207,7 @@ form.edit_chat_update .field
     width: 104px
 
 ul.rules
-  margin: 0 1.5em 0 0
+  margin: 0
   li
     list-style-type: none
     padding: 3px
